# crop-yield-prediction

./: .gitignore  README.md  explore_data.py  explore_data_viz.py  pyproject.toml  yield_predict.py  yield_predict_tuned.py
app/: app.py  model_utils.py
models/: label_encoders.pkl  rf_model_tuned.pkl
