[project]
name = "crop-yield-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.55.0",
    "ruff>=0.15.6",
    "shap>=0.49.1",
    "plotly>=6.6.0",
]
